# capstone

./: README.md  gazebo_ros_demos_readme.md
artbot_control/: CMakeLists.txt  artbot_controller_plugins.xml  package.xml
artbot_control/config/: artbot_control_PID.yaml
artbot_control/launch/: artbot_control.launch
artbot_control/src/: PID_Controller.cpp  PID_Controller.h  traj_pub.cpp
artbot_description/: CMakeLists.txt  package.xml
artbot_description/launch/: artbot_rviz.launch
artbot_description/urdf/: artbot.gazebo  artbot.urdf  artbot.xacro  artbot.xml
artbot_gazebo/: CMakeLists.txt  package.xml
artbot_gazebo/launch/: artbot_world.launch
artbot_gazebo/worlds/: artbot.world
