<?xml version="1.0"?>
<package>
  <name>artbot_control</name>
  <version>0.0.0</version>
  <description>The artbot_control package</description>

  <maintainer email="cmgladding@wpi.edu">Colin Gladding</maintainer>

  <license>BSD</license>

  <!-- Basic structure and syntax based on tutorials available at:-->
  <url type="website">http://http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="cmgladding@wpi.edu">Colin Gladding</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <controller_interface plugin="${prefix}/artbot_controller_plugins.xml"/>
  </export>

</package>
