<package>
  <name>artbot_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo files for articulated arm control demos</description>
  <maintainer email="cgladdin@gmail.com">Colin Gladding</maintainer>

  <license>BSD</license>

  <!-- Package based on examples available at these URLs !-->
  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="cmgladding@gmail.com">Colin Gladding</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>artbot_description</run_depend>
  <run_depend>artbot_control</run_depend> 
  <run_depend>gazebo_ros</run_depend> 

  <export>
  </export>
</package>
